jwt shiro commits